objects/MassEmailConfigurayion__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>English_email_template__c</fullName>
        <label>English email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>French_email_template__c</fullName>
        <label>French email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>German_email_template__c</fullName>
        <label>German email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japanese_email_template__c</fullName>
        <label>Japanese email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Email Configuration</label>
</CustomObject>